Fixed some small layout bugs. Made story text justified and centered by default.

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,12 @@ body {
   background: #ffffff; /* Site default background color */
 }
 
+textarea {
+  white-space: normal;
+  text-align: justify;
+  text-align-last: center;
+}
+
 textarea:disabled {
   background: #ffffff;
   color: #000000;
